# CanSig-Supplementary-Information

./: .gitignore  .gitmodules  README.md
Dhaka-implementation/: .gitignore  README.md  requirements.txt  setup.cfg
Dhaka-implementation/scripts/: demo.py
Dhaka-implementation/src/dhaka/: __init__.py  api.py  data.py  run.py  vae.py
Dhaka-implementation/tests/: test_data.py  test_run.py  test_vae.py
benchmark/: README.md  _cluster.py  data.py  eval_scvi.py  generate_dataset.sh  generate_datasets.R  generate_datasets.py  main.py  metrics.py  model_run.py  models.py  requirements.txt  run_benchmark.sh  run_integration.py  run_integration.sh  run_metrics.py  run_metrics.sh  scalop.R  slurm_utils.py  utils.py
benchmark/benchmark-results/: 20220624-183027-mynbi.json  20220624-183106-mynbi.json  20220624-183146-mynbi.json  20220624-183231-mynbi.json  20220624-183315-mynbi.json  20220624-183404-mynbi.json  20220624-183617-mynbi.json  20220624-183953-mynbi.json  20220624-184215-mynbi.json  20220624-184603-mynbi.json  20220624-184847-mynbi.json  20220624-185246-mynbi.json  (+12 more)
dhaka/: README.md
eval_metasigs/: scvi.py
notebooks/: Compare metasignatures and known-Neftel.ipynb  Compare metasignatures and known.ipynb  ESCC_usecase.ipynb  ESCCsurvival-usecase.ipynb  README.md  TCGA-associations.ipynb  chromosome_CNA_link.ipynb  plot-latent-spaces.ipynb  sign_gains_metasig5_escc.csv  simulated-data.ipynb  stability-analysis.ipynb
preprocessing/: main.py  utils.py
simulations/: ReadMe.md  bla.py  requirements.txt
spatial/: download_data.py  spatial_analysis.py
(+51 files in other folders)
