[metadata]
name = dhaka
version = 0.0.1
platform = any
url = https://github.com/BoevaLab/CanSig-Supplementary-Information/
description = Unofficial PyTorch implementation of project Dhaka
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
packages=find:
python requires = >= 3.8
install_requires =
    anndata
    numpy
    pandas
    torch    

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest

